APEX-ECOM-783: Alignment issue fix for the Add to cart button on PLP and Recently viewed contents.

--- a/source/themes/custom/ecom/styles/components/_product-detail-page.scss
+++ b/source/themes/custom/ecom/styles/components/_product-detail-page.scss
@@ -437,6 +437,7 @@ ul.field--name-field-product-features {
 
   &.out-of-stock {
     color: $sinopia;
+    padding: 6px 0;
   }
 }
 
